2003-01-01  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs: 
	  - Added XmlReader and XmlWriter Closing.
	  - Moved ReadXmlSchema stuff to new internal class XmlSchemaMapper.
	* XmlSchemaMapper.cs
	  - Much better way IMHO  to map xmlschema than the old one in 
	    DataSet.cs. Its, more flexible, cleaner, ...
	   		
2002-12-29  Ville Palo <vi64pa@koti.soon.fi>

	* XmlDataLoader.cs: Reading diffgrams.
	
2002-12-29  Ville Palo <vi64pa@koti.soon.fi>

	* DataRow.cs: Little fix to indexer and DataColumnCang* trigger fixes.
	* DataTable.cs: Added ChanginDataColumn () for triggering 
	DataColumnChanging event
	
2002-12-28  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs: Indentations to WriteXmlSchema () and one little fix
	
2002-12-28  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs: Indentations to WriteXml ()
	
2002-12-27  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs:
	* XmlDataLoader.cs: Moved ReadXml -stuff from DataSet.cs to new
	class XmlDataLoader.cs
	
2002-12-19  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs Implemented ReadXml with XmlReadMode.ReadSchema
	
2002-12-18  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs: Started to implement ReadXml-methods.
	
2002-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataSet.cs: implemented DefaultViewManager and GetList.

	* DataViewManager.cs: a bit of work on IList and ITypedList needed by
	DataList in System.Web.

	* DataViewManagerListItemTypeDescriptor.cs: custom type descriptor for
	DataViewManager.

2002-12-16  Ville Palo <vi64pa@koti.soon.fi>

	* DataRow.cs
	* DataTable.cs: Fixed NullException (rollback -event)
	* DataSet.cs: WriteXml -method does not anymore write <?xml... row.
	
2002-12-15  Ville Palo <vi64pa@koti.soon.fi>

	* DataRow.cs:
	* DataRowCollection.cs: Moved event triggering from DataRow to
	DataRowCollection.
	
2002-12-09  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs: Little fix to WriteTable () -method 
	and DoReadXmlSchema () -method.
	